# ga

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  Makefile  license.txt  readme.md
ga/: .ycm_extra_conf.py  algorithm.hpp  meta.hpp  utilities.hpp
include/ga/: algorithm.hpp  meta.hpp  problem.hpp  type.hpp  version.hpp.in
test/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  knapsack.cpp  multi.cpp  simple.cpp  simplest.cpp  version.cpp
